# expr-rs

./: Cargo.toml  Dockerfile  README.md  README.rst
.github/workflows/: release-please.yml  rust.yml
benches/: simple.rs
src/: eval.rs  lib.rs  parser.rs  tokens.rs  tree.rs
tests/: evaluation.rs
